<resources>
    <string name="app_name">NanoStats</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="fragment_stats_uncvonfirmed_balance">unconfirmed</string>

    <string name="payoutLimitText">Payout limit is</string>
    <string name="payoutProgressTitle">Remaining progress until payout</string>
    <string name="payoutProgressText">Minimum payout is set under your account on NanoPool</string>

    <string name="VersionNumber_PreText">Current app version: </string>

    <!--Wallet shared preferences-->
    <string name="zec_address"></string>
    <string name="eth_address"></string>
    <string name="etc_address"></string>
    <string name="sia_address"></string>
    <string name="xmr_address"></string>
    <string name="pasc_address"></string>
    <string name="etn_address"></string>

    <string name="menu_entry_overview">Overview</string>
    <string name="menu_entry_donate">Donate</string>

    <string name="title_activity_account">My Accounts</string>
    <string name="menuAction_Edit">Edit</string>
    <string name="menuAction_Copy">Copy Address</string>
    <string name="menuAction_Delete">Delete</string>

    <string name="noAccountAdded">Oh.. You haven\'t added an account yet...</string>
    <string name="howToAddAnAccount">To add an account, go to \'My Accounts\' in the app drawer, and then press the \'+\' button and select the address type</string>


    <string name="AccountActivity_AddWalletTitle">Type or insert your wallet address</string>
    <string name="AccountActivity_AddWalletMessage_P1">Only a</string>
    <string name="AccountActivity_AddWalletMessage_P2">address is accepted</string>

    <string name="AccountActivity_CheckingAccount_ProgressDialogTitle">Validating account</string>
    <string name="AccountActivity_CheckingAccount_ProgressDialogMessage">Checking if your account exist in Nanopool</string>
    <string name="AccountActivity_AccountFound">Your account has been verified and added!</string>
    <string name="AccountActivity_AccountNotFound">Couldn\'t find your account! Please verify that your address is correct and try again</string>


    <string name="PaymentConfirmed">Confirmed</string>
    <string name="PaymentConfirmed_true">Yes</string>
    <string name="PaymentConfirmed_false">No</string>
    <string name="title_activity_nanopool_stats">NanopoolStatsActivity</string>

    <string name="cryptoName_ETH">Ethereum</string>
    <string name="cryptoName_ETC">Ethereum Classic</string>
    <string name="cryptoName_SIA">SiaCoin</string>
    <string name="cryptoName_ZEC">ZCash</string>
    <string name="cryptoName_XMR">Monero</string>
    <string name="cryptoName_PASC">Pascal</string>
    <string name="cryptoName_ETN">Electroneum</string>

    <string name="adapter_payments_ReceivedText">Received</string>
    <string name="adapter_payments_ReceivedOn">On</string>


    <string name="adapter_workers_LastSeen">Last seen</string>

    <string name="adapter_overview_sharesText">SHARES PAST DAY</string>
    <string name="fragment_stats_WorkersTitle">Workers</string>
    <string name="activity_donatePaypalText">Donate with paypal</string>


    <string name="dialog_positive_add">Add</string>
    <string name="dialog_negative_cancel">Cancel</string>
    <string name="dialog_neutral_scannQr">Read Code</string>


    <string name="donate_crypto_BTC">1Muxuue7o1hztxpBMZZJTyXV22KrCy5QFs</string>
    <string name="donate_crypto_BCH">qr2zjlu2kdq6q6fa55qcc6nw7eyc5prxdc2szakm9q</string>
    <string name="donate_crypto_ETH">0x078F5ECb8D732afa6276eed4Dee1320Fb877d738</string>
    <string name="donate_crypto_ETC">0x7b8748125f55dead2ff3254720a97ce08c4ac413</string>
    <string name="donate_crypto_ZEC">t1a4eB5eDKkcRpuFnjemSgvYQGnnTuDA2YU</string>
    <string name="donate_crypto_XMR">465vz7YzczZJ6vmYjbiM7cJoJeiNJ6kd99YdZ4LkKfJr2Leof2FLP3s8WiivUB5y8xWXqxA8zMxBc3iKdZqwt9X9V2CgWcx</string>
    <string name="donate_crypto_LTC">LVZLExBkiA3s4jYrScsTQHyJgvnNcPQN3L</string>
    <string name="title_activity_donate">Donation</string>
    <string name="activity_donate_Title">Thank you!</string>
    <string name="activity_donate_SubTitle">Your donation keeps this app alive!</string>


    <string name="month1">January</string>
    <string name="month2">February</string>
    <string name="month3">March</string>
    <string name="month4">April</string>
    <string name="month5">May</string>
    <string name="month6">June</string>
    <string name="month7">July</string>
    <string name="month8">August</string>
    <string name="month9">September</string>
    <string name="month10">October</string>
    <string name="month11">November</string>
    <string name="month12">December</string>

    <string name="month1SHORT">Jan</string>
    <string name="month2SHORT">Feb</string>
    <string name="month3SHORT">Mar</string>
    <string name="month4SHORT">Apr</string>
    <string name="month5SHORT">May</string>
    <string name="month6SHORT">Jun</string>
    <string name="month7SHORT">Jul</string>
    <string name="month8SHORT">Aug</string>
    <string name="month9SHORT">Sep</string>
    <string name="month10SHORT">Oct</string>
    <string name="month11SHORT">Nov</string>
    <string name="month12SHORT">Dec</string>

    <string name="donation_about_Headline">About donation</string>
    <string name="donation_about_text">NanoStats is free does not include ads or any required payments to work.
        Donations is optional. If you choose to donate or not, it will not change how app behave or work.</string>
    <string name="title_activity_payments">Payments</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>
