<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:title="@string/menu_entry_overview"
            android:icon="@drawable/ic_home_black_24dp"
            />
        <item
            android:id="@+id/nav_eth"
            android:icon="@drawable/ic_etherum"
            android:title="@string/cryptoName_ETH" />
        <item
            android:id="@+id/nav_etc"
            android:icon="@drawable/ic_etherum_classic"
            android:title="@string/cryptoName_ETC" />
        <item
            android:id="@+id/nav_sia"
            android:icon="@drawable/ic_siacoin"
            android:title="@string/cryptoName_SIA" />
        <item
            android:id="@+id/nav_zec"
            android:icon="@drawable/ic_zcash"
            android:title="@string/cryptoName_ZEC" />
        <item
            android:id="@+id/nav_xmr"
            android:icon="@drawable/ic_monero"
            android:title="@string/cryptoName_XMR" />
        <item
            android:id="@+id/nav_pasc"
            android:icon="@drawable/ic_pascal"
            android:title="@string/cryptoName_PASC" />
        <item
            android:id="@+id/nav_etn"
            android:icon="@drawable/ic_electroneum"
            android:title="@string/cryptoName_ETN" />
    </group>

    <item android:title="Accounting">
        <menu>
            <item
                android:id="@+id/nav_myAccounts"
                android:icon="@drawable/ic_account_wallet"
                android:title="@string/title_activity_account" />
            <item
                android:id="@+id/nav_donate"
                android:icon="@drawable/ic_money"
                android:title="@string/menu_entry_donate" />
        </menu>
    </item>

</menu>
