<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.iktdev.nanostat.DonateActivity"
    tools:showIn="@layout/activity_donate"
    android:descendantFocusability="blocksDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_margin="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/donation_about_Headline"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_margin="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_about_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginLeft="12dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_donatePaypalText"/>
            <ImageButton
                android:tint="@color/colorSecondary"
                android:backgroundTint="@color/colorAccent"
                android:id="@+id/activity_donate_paypal"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:minWidth="150dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_chevron_right_black_24dp"
                />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/activity_donate_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
