<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:baselineAligned="false">
        <LinearLayout
            android:id="@+id/receivedValuta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="@string/adapter_payments_ReceivedText"
                android:textSize="18sp"
                android:layout_marginEnd="12dp"
                android:layout_marginLeft="8dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/receivedAmount"
            android:layout_weight="0.5"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/adapter_paymentsBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="0.0000000000000"/>
            <TextView
                android:id="@+id/adapter_paymentsCurrencyShort"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="###"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adapter_payments_ReceivedOn"
                android:layout_marginRight="12dp"
                />
            <TextView
                android:id="@+id/adapter_paymentsDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00.000.00"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:text="@string/PaymentConfirmed"/>
            <TextView
                android:id="@+id/adapter_paymentConfirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nan"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>