<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.iktdev.nanostat.NanopoolStatsFragment"
    tools:showIn="@layout/fragment_nanopool_stats">

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/large_text" />-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Hashrate"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="0.00"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                    android:id="@+id/fragment_stats_hashrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginLeft="4dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                    android:id="@+id/fragment_stats_hashrate_format"
                    android:text="Banana/s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <com.iktdev.nanostat.CustomViews.CircleProgressBar
                        android:id="@+id/fragment_stats_payoutProgressBar"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="75dp"
                        app:progressBarThickness="6dp"
                        />
                    <TextView
                        android:id="@+id/fragment_stats_progressPercent"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="###%"/>
                </RelativeLayout>
                <LinearLayout
                    android:layout_marginLeft="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/payoutProgressTitle"
                        />
                    <LinearLayout
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_marginRight="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/payoutLimitText"
                            />
                        <TextView
                            android:id="@+id/fragment_stats_payoutLimit"
                            android:text="0.00"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                        <TextView
                            android:id="@+id/fragment_stats_cryptoNameLimit"
                            android:layout_marginLeft="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="###"/>
                    </LinearLayout>
                    <TextView
                        android:layout_marginTop="6dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/payoutProgressText"/>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>



        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/fragment_stats_chart"
            android:minHeight="300dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
